--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>pr0n</title>
     <meta name="description" content="Your Curiosity Will Be the Death of You.">
     <meta name="keywords"  content="潘卓鈞, Arron Poon, pr0n">
-    <link rel="canonical" href="https://high.hk/">
+    <link rel="canonical" href="http://high.hk/" />
     <link rel="me" href="https://twitter.com/pr0n">
     <link rel="me" href="https://github.com/pr0n">
-    <link rel="stylesheet" media ="all" href="https://fonts.typotheque.com/WF-012167-008889.css">
+    <link href='https://fonts.typotheque.com/WF-012167-008889.css' rel='stylesheet' type='text/css'>
     <style amp-custom>
 
       body {
